--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
 
 <div class="contaianer text-center mt -5 mb -5">
   <h1>TP ANGULAR</h1>
-  <p>Interpolation : {{title}} : 7</p>
-  <p>Interpolation avec methode : {{getTitle()}}</p>
+  <p>Interpolation : {{title}} : {{3+4}}</p>
+  <p>Interpolation avec methode : {{getTitle()}} : {{3+4}}</p>
   <div>
     <label>Property binding</label>
     <input type="text" [value]="my_value">
@@ -18,6 +18,10 @@
   <div>
     <label>Event binding</label>
     <button type="button" class="btn btn-primary" click="updateTitle()">Modifier titre</button>
+  </div>
+  <div>
+    <label>Two-way binding</label>
+    <input type="text" [(ngModel)]="title">
   </div>
 </div>
 <router-outlet></router-outlet>
