--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,5 +23,8 @@
     <label>Two-way binding</label>
     <input type="text" [(ngModel)]="title">
   </div>
+  <div class="my-class">
+    <button type="button" class="btn btn-primary" click="isClassVisible()">Modifier couleur</button>
+  </div>
 </div>
 <router-outlet></router-outlet>
