--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,4 +27,5 @@
     <button type="button" class="btn btn-primary" click="isClassVisible()">Modifier couleur</button>
   </div>
 </div>
+<app-parent></app-parent>
 <router-outlet></router-outlet>
