--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,5 +27,7 @@
     <button type="button" class="btn btn-primary" click="isClassVisible()">Modifier couleur</button>
   </div>
 </div>
-<app-parent></app-parent>
+<app-parent>
+  <app-title [color]="'red'" [value]="'Mes contacts'"></app-title>
+</app-parent>
 <router-outlet></router-outlet>
