--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,4 +30,7 @@
 <app-parent>
   <app-title [color]="'red'" [value]="'Mes contacts'"></app-title>
 </app-parent>
+<app-first></app-first>
+<app-second></app-second>
+
 <router-outlet></router-outlet>
