--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,11 @@
 <app-parent>
   <app-title [color]="'red'" [value]="'Mes contacts'"></app-title>
 </app-parent>
+
+<app-participant></app-participant>
+<app-chat></app-chat>
+
+
 <app-first></app-first>
 <app-second></app-second>
-
 <router-outlet></router-outlet>
